# wiggle-service

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/wiggle_service/: __init__.py  main.py
src/wiggle_service/api/: __init__.py
src/wiggle_service/api/routes/: __init__.py  analytics.py  exchanges.py  health.py  opportunities.py  tokens.py
src/wiggle_service/core/: __init__.py  config.py
src/wiggle_service/db/: __init__.py  connection.py
src/wiggle_service/models/: __init__.py  opportunity.py
